<resources>
    <string name="app_name">QuizAppFirebase</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_enter_password">enter password</string>
    <string name="hint_enter_email">enter email</string>
    <string name="login_screen">WELCOME TO QUIZAPP</string>
    <string name="button_login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register now!</string>
    <string name="button_register">register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login!</string>
    <string name="hint_enter_username">enter username</string>
    <string name="bottom_menu_favourites">Favourites</string>
    <string name="bottom_menu_explore">Explore</string>
    <string name="bottom_menu_your_question_sets">Your Question Sets</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="addquestionset">addquestionset</string>
    <string name="question_set_name_dummy">QUESTION SET NAME</string>
    <string name="favourite_button_desc">favouritequestionsetbutton</string>
    <string name="question_set_by">By:</string>
    <string name="author_name_dummy">AUTHOR NAME</string>
    <string name="fav_counter_dummy">0</string>
    <string name="create_new_question_set">CREATE NEW QUESTION SET</string>
    <string name="name">NAME</string>
    <string name="submit">ADD</string>
    <string name="add_question_set_dialog_switch_private">Private</string>
    <string name="edit_question_set">EDIT QUESTION SET</string>
    <string name="edit">EDIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name_dummy">CATEGORY NAME</string>
    <string name="create_new_category">CREATE NEW CATEGORY</string>
    <string name="edit_category">EDIT CATEGORY</string>
    <string name="question_prompt">Question:</string>
    <string name="question_text_dummy">QUESTION TEXT</string>
    <string name="answer_text_dummy">ANSWER TEXT</string>
    <string name="answer_prompt">Answer:</string>
    <string name="create_new_question_and_answer">Create new Question and Answer</string>
    <string name="question_hint">QUESTION</string>
    <string name="answer_hint">ANSWER</string>
    <string name="edit_question_and_answer">EDIT QUESTION AND ANSWER</string>
    <string name="browse">BROWSE</string>
    <string name="play">PLAY</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="change_username_hint">change username</string>
    <string name="change">CHANGE</string>
    <string name="set_alarm">SET TRAINING ALARM</string>
    <string name="set_time">set time</string>
    <string name="disable_alarm">disable</string>
    <string name="pick_a_quiz_mode">PICK A QUIZ MODE</string>
    <string name="picker_standard">STANDARD</string>
    <string name="picker_time">TIME CHALLENGE</string>
    <string name="picker_writing">WRITING CHALLENGE</string>
    <string name="too_few_questions">TOO FEW QUESTIONS\n IN THIS SET/CATEGORY\n\n ADD AT LEAST 5 QUESTIONS</string>
    <string name="prompt_question_amount">How many questions \n would you like to test?</string>
    <string name="start">start</string>
    <string name="point_dummy">0</string>
    <string name="question_dummy">QUESTION</string>
    <string name="answer_dummy">ANSWER</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_got_x_points">You got X points!</string>
    <string name="go_back">return</string>
    <string name="check">check</string>
</resources>