<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SettingsFragment">

    <TextView
        android:id="@+id/text_view_change_username_prompt_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_username"
        android:textColor="@color/new_on_background"
        android:paddingTop="40dp"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edit_username_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/change_username_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_change_username_prompt_settings"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_edit_username_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_change_username_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_edit_username_settings"
        app:layout_constraintStart_toStartOf="@id/button_time_picker_settings"
        app:layout_constraintEnd_toEndOf="@id/button_time_picker_settings"
        />

    <TextView
        android:id="@+id/text_view_set_alarm_prompt_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:textColor="@color/new_on_background"
        android:paddingTop="60dp"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/button_change_username_settings"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_time_picker_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_set_alarm_prompt_timer"
        />

    <Button
        android:id="@+id/button_disable_alarm_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/disable_alarm"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="@id/button_time_picker_settings"
        app:layout_constraintEnd_toEndOf="@id/button_time_picker_settings"
        app:layout_constraintTop_toBottomOf="@id/button_time_picker_settings"
        />

</androidx.constraintlayout.widget.ConstraintLayout>