<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.QuizModePickerFragment">

    <TextView
        android:id="@+id/text_view_1_quiz_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_quiz_mode"
        android:textColor="@color/new_on_background"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_start_simple_quiz_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/picker_standard"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_1_quiz_picker"
        app:layout_constraintStart_toStartOf="@id/button_start_text_quiz_picker"
        app:layout_constraintEnd_toEndOf="@id/button_start_text_quiz_picker"
        />

    <Button
        android:id="@+id/button_start_time_quiz_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/picker_time"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_start_simple_quiz_picker"
        app:layout_constraintStart_toStartOf="@id/button_start_text_quiz_picker"
        app:layout_constraintEnd_toEndOf="@id/button_start_text_quiz_picker"
        />

    <Button
        android:id="@+id/button_start_text_quiz_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picker_writing"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_start_time_quiz_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>