<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.QuizTextFragment">

    <TextView
        android:id="@+id/text_view_quiz_text_point_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point_dummy"
        android:textSize="30sp"
        android:textColor="@color/new_on_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/text_view_quiz_text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_dummy"
        android:textSize="45sp"
        android:textColor="@color/new_on_background"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_quiz_text_point_counter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_text_quiz_text_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:textSize="24sp"
        android:hint="@string/answer_dummy"
        android:textColorHint="@color/new_on_background"
        android:textColor="@color/new_on_background"
        android:backgroundTint="@color/new_on_background"
        app:layout_constraintTop_toBottomOf="@+id/text_view_quiz_text_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="@string/answer_dummy"
        android:inputType="text" />

    <Button
        android:id="@+id/button_quiz_text_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/check"
        app:layout_constraintTop_toBottomOf="@id/edit_text_quiz_text_answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>