<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_question_set_fav_recycler_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/new_primary_variant"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <TextView
            android:id="@+id/text_view_question_set_name_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_set_name_dummy"
            android:textSize="20sp"
            android:textColor="@color/new_on_primary"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/image_view_question_set_make_fav_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_full_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_question_set_name_fav"
            android:layout_marginEnd="6dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:contentDescription="@string/favourite_button_desc" />

        <TextView
            android:id="@+id/text_view_question_set_author_by_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_view_question_set_name_fav"
            app:layout_constraintTop_toBottomOf="@id/text_view_question_set_name_fav"
            android:text="@string/question_set_by"
            android:textColor="@color/new_on_primary"
            android:textSize="16sp"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/text_view_question_set_author_name_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/text_view_question_set_author_by_fav"
            app:layout_constraintStart_toEndOf="@id/text_view_question_set_author_by_fav"
            android:text="@string/author_name_dummy"
            android:textColor="@color/new_on_primary"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/text_view_question_set_fav_counter_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/text_view_question_set_author_by_fav"
            app:layout_constraintStart_toStartOf="@id/image_view_question_set_make_fav_fav"
            app:layout_constraintEnd_toEndOf="@id/image_view_question_set_make_fav_fav"
            android:text="@string/fav_counter_dummy"
            android:textColor="@color/new_on_primary"
            android:textSize="16sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>