<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_question_and_answer_recycler_view_user"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardBackgroundColor="@color/new_primary_variant"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <TextView
            android:id="@+id/text_view_question_and_answer_question_prompt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_prompt"
            android:textSize="20sp"
            android:textColor="@color/new_on_primary"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/text_view_question_and_answer_question_text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text_dummy"
            android:textSize="25sp"
            android:textColor="@color/new_on_primary"
            app:layout_constraintTop_toBottomOf="@id/text_view_question_and_answer_question_prompt_user"
            app:layout_constraintStart_toStartOf="@id/text_view_question_and_answer_question_prompt_user"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/text_view_question_and_answer_answer_prompt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_prompt"
            android:textSize="20sp"
            android:textColor="@color/new_on_primary"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_view_question_and_answer_question_text_user"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/text_view_question_and_answer_answer_text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text_dummy"
            android:textSize="25sp"
            android:textColor="@color/new_on_primary"
            app:layout_constraintTop_toBottomOf="@id/text_view_question_and_answer_answer_prompt_user"
            app:layout_constraintStart_toStartOf="@id/text_view_question_and_answer_answer_prompt_user"
            android:layout_marginStart="10dp"
            />


        <ImageView
            android:id="@+id/image_view_question_and_answer_edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/favourite_button_desc"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_edit_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_question_and_answer_question_prompt_user"
            app:layout_constraintBottom_toBottomOf="@id/text_view_question_and_answer_answer_text_user"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>